Fixed images stretching, and tables overflowing

--- a/assets/css/skybox-details.css
+++ b/assets/css/skybox-details.css
@@ -15,6 +15,8 @@ article h1, article h2 {
 article img {
     max-width: 100%;
     border-radius: 5px;
+    width: auto;
+    height: auto;
 }
 
 article p {
@@ -69,6 +71,7 @@ article table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    table-layout: fixed;
 }
 
 article table, article th, article td {
